[package]
name = "insightface"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://pwa.ir"
repository = "https://github.com/xclud/rust_insightface"
description = "Crate to work with Insightface's Face Detection and Face Swap models."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onnxruntime = "0.0.14"
ndarray = "0.15.1"

[dev-dependencies]
image = "0.24.7"
