[package]
name = "insightface"
version = "0.0.3"
edition = "2021"
license = "MIT"
homepage = "https://pwa.ir"
repository = "https://github.com/xclud/rust_insightface"
documentation = "https://docs.rs/crate/insightface"
description = "Crate to work with Insightface's Face Detection and Face Swap models."
categories = ["algorithms", "science", "computer-vision"]
keywords = ["insightface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = "2.0.0-rc.10"
ndarray = "^0.16.1"
nalgebra = "^0.34.0"
image = "^0.25.6"
aikit = "^0.0.3"
